k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: back-sa
      containers:
        - name: backend
          image: gcr.io/secdashboard-pfe/backend:b5831d79bbe62d04753f04237c6eada51ef798ad
          ports:
            - containerPort: 5000

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
